crystal-facet-uml (1.31.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * component titles do not touch the type icon anymore
  * icon alignment in classifiers is not rounded to int anymore

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 05 Jun 2021 09:00:00 +0200

crystal-facet-uml (1.30.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in search mode, objects are highlighted individually
    (not all per diagram)
  * in search result list, long names have nice linebreaks
  * in navigation tree, long names have nice linebreaks
  * Guillements characters surround stereoptypes

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 05 Jun 2021 08:00:00 +0200

crystal-facet-uml (1.29.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * newly created classifiers are placed to clicked location
    (bugfix, bug introduced on Fri Mar 26, affecting v1.28.0 and v1.29.0)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 02 May 2021 16:00:00 +0200

crystal-facet-uml (1.29.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * return arrows in sequences have filled arrow tips,
    distinguishable from dependencies
  * stereotypes are xmi-exported to LocalProfile namespace
  * valuetypes are xmi-exported to DataTypes
  * merainfo.xml references homepage which is now tls/https authenticated
  * nav-tree and search result lists draw a bit more space around texts
  * A white line is drawn around highlighted diagrams
    (additional to green marker)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 01 May 2021 22:00:00 +0200

crystal-facet-uml (1.28.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * gcov target is only build if -DCFU_ADD_GCOV_TARGET=ON (Closes: #983836)
  * test coverage on pencil package increased
  * exporting image-file types shows statistics on exported elements
  * list layout improved, golden ratio is applied
  * timing and sequence diagram layouting improved;
    special handling for comments/reqs in timing and sequence diagrams