@@ -3,8 +3,10 @@ crystal-facet-uml (1.31.0) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
   * component titles do not touch the type icon anymore
   * icon alignment in classifiers is not rounded to int anymore
+  * use case circles do not cut into label texts
+  * decision/choice rhombus do not cut into label texts
 
- -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 05 Jun 2021 09:00:00 +0200
+ -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 30 Jul 2021 09:00:00 +0200
 
 crystal-facet-uml (1.30.0) UNRELEASED; urgency=medium
 
